--- a/src/index.pug
+++ b/src/index.pug
@@ -1,35 +1,45 @@
-extends ./assets/layout/app
+extends layout/app
 
 block main
     section
-        div
-            div.hidden.fade.slides
-                img.object-cover.w-full.h-72(src="assets/images/slideshow/Fotolia_60168853_M.jpg", alt="")
-            div.hidden.fade.slides
-                img.object-cover.w-full.h-72(src="assets/images/slideshow/14369636.jpg", alt="")
-            div.hidden.fade.slides
-                img.object-cover.w-full.h-72(src="assets/images/slideshow/pexels-photo-176342.jpg", alt="")
-    main
-        div.page-width
-            div.flex.flex-col.items-center.gap-4.mt-12
-                h2 > Have you ever wondered what engineers do?
-                p Engineers make use of maths and science as tools to develop solutions to challenges facing human kind. They make sure developed solutions work. They make sure developed solutions are economical. Their goal is to bridge the world of complex and elaborate scientific discovery to the world of simple and practical application of technology to meet societal needs.
-                img.mt-5.w-96(src="assets/images/home/Fotolia_89442448_XS.jpg", alt="Worker wearing a construction hat and holding a clipboard")
-                div(class="w-3/4 h-px bg-siletaBlack my-12")
-            div.flex.flex-col.items-center.gap-4
-                h2 > …and what role engineers play in projects?
-                p Engineers play a role of supporting Management to attain outcomes of a project. They consistently identify potential challenges that might stop successful project delivery and generate options and answers thereto. They communicate these challenges and solutions in simple terms to management such that associated costs are quantified together with the period necessary to meet project requirements.
-                img.mt-5.w-96(src="assets/images/home/Fotolia_112265141_XS.jpg", alt="Man drawing architect plans")
-                div(class="w-3/4 h-px bg-siletaBlack my-12")
-            div.flex.flex-col.items-center.gap-4
-                h2 > Contribution added by Engineers
-                p About ten percent of project value is added by engineering. Without this contribution a project runs a risk of not meeting the project goals as desired or even having high ownership costs. At Sileta, we are open to an obligation-free discussion on how we can together approach your next project such that it succeeds.
-                img.mt-5.w-96(src="assets/images/home/Fotolia_57724804_S.jpg", alt="Man standing with arms folded wearing a blue overall and construction helmet")
-                div(class="w-3/4 h-px bg-siletaBlack my-12")
-            div.flex.flex-col.items-center.gap-4.mb-12
-                h2 > What do you get from Sileta Engineers?
-                ul.list-disc.px-6
-                    li Conditional Assessment which informs a client on the current situation. Here an engineer looks at the project and reflects on what the key issues are – like a doctor examining the patient and giving out a diagnosis.
-                    li Project Specification which are normally supported by drawings and bills of quantities. Here the engineer tells how the project will be implemented how much such a project will need – much like a doctor’s prescription.
-                    li Construction monitoring allows for the engineer to oversee the implementation of his solution. Here the quality of workmanship and implementation time is monitored to ensure the project falls within the available budget and time.
-                img.mt-5.w-96(src="assets/images/home/Fotolia_107164386_S.jpg", alt="Construction helmet resting on architect drawings")
+        div.hidden.fade.slides
+            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/Fotolia_60168853_M.jpg", alt="")
+        div.hidden.fade.slides
+            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/14369636.jpg", alt="")
+        div.hidden.fade.slides
+            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/pexels-photo-176342.jpg", alt="")
+    main.page-width.left-text
+            ul.flex.flex-col.items-center.gap-4.mt-12.home(class="md:items-start")
+                li.home__heading
+                    h2 > Have you ever wondered what engineers do?
+                li.home__paragraph
+                    p Engineers make use of maths and science as tools to develop solutions to challenges facing human kind. They make sure developed solutions work. They make sure developed solutions are economical. Their goal is to bridge the world of complex and elaborate scientific discovery to the world of simple and practical application of technology to meet societal needs.
+                li.home__image
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_89442448_XS.jpg", alt="Worker wearing a construction hat and holding a clipboard")
+                div.line-75(class="lg:w-full")
+            ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
+                li.home__heading
+                    h2 > …and what role engineers play in projects?
+                li.home__paragraph
+                    p Engineers play a role of supporting Management to attain outcomes of a project. They consistently identify potential challenges that might stop successful project delivery and generate options and answers thereto. They communicate these challenges and solutions in simple terms to management such that associated costs are quantified together with the period necessary to meet project requirements.
+                li.home__image
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_112265141_XS.jpg", alt="Man drawing architect plans")
+                div.line-75(class="lg:w-full")
+            ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
+                li.home__heading
+                    h2 > Contribution added by Engineers
+                li.home__paragraph
+                    p About ten percent of project value is added by engineering. Without this contribution a project runs a risk of not meeting the project goals as desired or even having high ownership costs. At Sileta, we are open to an obligation-free discussion on how we can together approach your next project such that it succeeds.
+                li.home__image
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_57724804_S.jpg", alt="Man standing with arms folded wearing a blue overall and construction helmet")
+                div.line-75(class="lg:w-full")
+            ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
+                li.home__heading
+                    h2 > What do you get from Sileta Engineers?
+                li.home__paragraph
+                    ul.px-6.list-disc.list-inside(class="md:list-outside")
+                        li Conditional Assessment which informs a client on the current situation. Here an engineer looks at the project and reflects on what the key issues are – like a doctor examining the patient and giving out a diagnosis.
+                        li Project Specification which are normally supported by drawings and bills of quantities. Here the engineer tells how the project will be implemented how much such a project will need – much like a doctor’s prescription.
+                        li Construction monitoring allows for the engineer to oversee the implementation of his solution. Here the quality of workmanship and implementation time is monitored to ensure the project falls within the available budget and time.
+                li.home__image
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_107164386_S.jpg", alt="Construction helmet resting on architect drawings")
