--- a/src/services.pug
+++ b/src/services.pug
@@ -1,7 +1,57 @@
-extends ./assets/layout/app
+extends layout/app
 
 append variables
     - pageTitle = 'Services'
 
 block main
-    
+    section
+        include layout/page-header
+    div.line-25(class="md:hidden")
+
+    section.page-width.left-text
+        h3.mb-12.mt-12.underline.underline-offset-8 Sileta Services
+        ul.services__grid
+            li.mb-12
+                h4.mb-4 Engineering Consulting
+                ul.flex.flex-col.gap-2
+                    li
+                        p.text-xl Structural
+                    li
+                        p.text-xl Civil
+                    li 
+                        p.text-xl Mechanical
+                    li
+                        p.text-xl Electrical
+            li.mb-12
+                h4.mb-4 Management Consulting
+                ul.flex.flex-col.gap-2 
+                    li
+                        p.text-xl Structural
+                    li
+                        p.text-xl Project management
+                    li 
+                        p.text-xl Programme management
+                    li
+                        p.text-xl Portfolio management
+            li.mb-12
+                h4 Case Management
+            li
+                h4 Shared ICT Infrastructure
+        div.line-full
+    main.page-width.left-text
+        div
+            h2 > Engineering Consulting
+            p We offer engineering consulting services to deliver total solutions to our clients. We are in a position to offer Mechanical, Electrical, Civil, and Structural Engineering Services.<br><br>Our areas of specialization include the following: Building Thermal Designs, Air Handling Designs, Material Handling Systems, Piping Network Designs (Air & Water), Steam Installations (Boilers, Autoclaves, ect.), Vertical Transportation (Lift) Installations, Gravel roads, Storm Water Management, VIP Schemes, Borehole Installations, Maintenance Management, etc.<br><br>We render the above services in various Applications such as in Factories, Residences, Commercial & Public Buildings, Tall Buildings, Places of Assembly, Hotels & Dormitories, Educational Facilities, Automobiles, Mass Transit, Aircraft, and Ships.
+            div.line-50
+        div
+            h2 > Shared ICT Infrastructure
+            p Property owners are facing demands to increase the number of type of electronic services to meet needs for communication, security and facility management. The service providers responsible for these services commonly install cabling to connect their equipment and connect to other facilities.<br><br>This has traditionally required that each supplier install their own cable network to support the services they are installing. The resulting, independent, cabling systems are installed into a single structure and have to be managed over their useful life.<br><br>The substantial duplication of facilities is wasteful and the lack of coordination among service providers results in fragmented documentation, poor reuse of existing infrastructure and increased costs against the property.<br><br>When changes are requested to services, the supplier has to disrupt operations in the building to implement the modifications. Our approach is to allow for what we call Shared Cabling Infrastructure similar to nerve system for a Building.
+            div.line-50
+        div 
+            h2 > Management Consulting
+            p Portfolio Management: the process of analysing and allocating organizational resources to programmes and projects across the organization to achieve corporate objectives and to maximize value for the stakeholders. Sileta can support by provide Project Management Office or facilitate setting up such.<br><br>Program Management: links Business Strategy with Projects and while general project management focus is on product delivery; here sharing know how with the client such that on project completion – the Client organization is in position to be capacitated with new strategic skills.<br><br>Project Management: The South African Engineering consulting environment is typified by the project life cycle as defined by the Engineering Council of South Africa (ECSA) which cycle we follow from: Inception, Concept & Viability, Design Development, Documentation & Procurement, Contract Administration, and Close Out.
+            div.line-50
+        div 
+            h2 > Case Management
+            p Sileta knows very well the challenge of juggling several commitments with limited resources. This is a challenge Sileta accepted very early and dedicated effort in mastering as a skill. We have distilled this skill into a Software System which reduces commitments into Cases.<br><br>This Case Management System (CMS) allows a Manager or Entrepreneur to delegate issues or cases online. The CMS allows for each case the definition of the following: Priority, Due Date, Responsible Person, and Classification of such case into several configurable categories such as Marketing, Operations, and Finance.<br><br>Moreover, the system allows for Clients to e-mail requests which the system handles through providing necessary feedback – while internally, management can then use the system to either delegate such a request to an internal or external resource.<br><br>As personnel continuously update their activities in resolving a case – appropriate information is automatically reflected on the Client side thereby reducing Client frustration by keeping him or her informed thereby streamlining Entrepreneurs’ limited resources.
+        img.mt-12(src="../assets/images/services/Fotolia_110420101_M.jpg", alt="Construction workers with hard hats on with a city skyline in the background")
