--- a/src/company.pug
+++ b/src/company.pug
@@ -1,7 +1,31 @@
-extends ./assets/layout/app
+extends layout/app
 
 append variables
     - pageTitle = 'Company'
 
 block main
-    
+
+    section
+        include layout/page-header
+
+    main.company.page-width.left-text
+        div
+            h2 > Who are we?
+            p We are a team of talented engineers who in our own capacity as individuals have a vast amount of experience but decided to come together and form a consulting firm with the sole intention of doing things differently.<br><br>We want to avail our expertise to areas where others see as neither glamorous nor lucrative such as in rural areas. We want to be involved in establishing clinics, hospitals, water treatment plants, schools, re-newable energy sources, and other similar infrastructure for the betterment of vulnerable society, first and foremost.<br><br>This is the reason for the name of our firm Siletha Intuthuko Consulting Engineers a Zulu cry translated “We bring progress!”<br><br>In view of the above and in order to be a sustainable business we selected key success factors which we believe will make us sustainable in the long run. We have resolved to be an open-minded learning organization that embraces the use of technology. Moreover, we have struck strategic partnerships which we believe we can utilise to create synergies and unlock value for the communities we serve.<br><br>You will prefer working with us because…
+            <br>
+            ul.px-6.list-inside.list-disc
+                li We hold Quality of Workmanship in high regard.
+                li We make sure we communicate effectively just in time.
+                li We simplify engineering in order to keep you in control of your project.
+            <br>
+            p 
+                strong Our Vision:
+                |  is for every South African to have access to cutting-edge infrastructure.
+                <br>
+                strong Our Mission: 
+                | to provide the simplest engineering advise in order to deploy technology in South Africa.
+        ul.company__images
+            li
+                img(src="../assets/images/company/Fotolia_106239435_XS.jpg", alt="A building site with a variety of construction vehicles at work")
+            li
+                img.company__images-2(src="../assets/images/company/pexels-photo-24110-small.jpg", alt="Skyscraper buildings with a cloudy sky in the background")
