--- a/src/layout/app.pug
+++ b/src/layout/app.pug
@@ -2,18 +2,16 @@ doctype html
 html(lang="en")
 
     block variables
-        include ../variables
+        include ../data/variables
         
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle}
-        link(rel="stylesheet", href="assets/scss/main.scss")
+        link(rel="stylesheet", href="styles/main.scss")
 
     body
-
-        include ../data
 
         block header 
             include header
@@ -22,5 +20,5 @@ html(lang="en")
 
         block footer 
             include footer
-
-        <script src="index.js"></script>
+            
+        script(src="index.js")
