Header and footer fully responsive

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,11 +3,11 @@ extends layout/app
 block main
     section
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/Fotolia_60168853_M.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 lg:h-128" src="../assets/images/slideshow/Fotolia_60168853_M.jpg", alt="")
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/14369636.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 lg:h-128" src="../assets/images/slideshow/14369636.jpg", alt="")
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96" src="../assets/images/slideshow/pexels-photo-176342.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 lg:h-128" src="../assets/images/slideshow/pexels-photo-176342.jpg", alt="")
     main.page-width.left-text
             ul.flex.flex-col.items-center.gap-4.mt-12.home(class="md:items-start")
                 li.home__heading
