--- a/src/layout/footer.pug
+++ b/src/layout/footer.pug
@@ -1,21 +1,20 @@
 nav
-    div.w-full.bg-siletaLightgreen.flex.flex-col.py-8.mt-12.items-center(class="md:flex-row md:justify-around")
-        div.flex.flex-col.items-center
+    div.w-full.bg-siletaLightgreen.flex.flex-col.py-8.mt-12.items-center(class="md:flex-row md:justify-around lg:gap-x-16 lg:items-start lg:px-48  lg:justify-start")
+        div.flex.flex-col.items-center(class="lg:items-start")
             h2.underline.underline-offset-4 Navigation 
             ul
             each link, title in navList 
-                li.list-none.mt-4
-                    a.py-2.px-16.text-siletaMedium(href= link)= title
+                li.list-none.mt-4(class="lg:mt-0")
+                    a.py-2.px-16.text-siletaMedium(href= link)(class="lg:py-0 lg:px-0 lg:text-siletaBody")= title
         div.line-25.my-6(class="md:hidden")
-        div
-            ul.flex.flex-col.items-center.footer-translate
-                li
-                    h2.underline.underline-offset-4 Contact
-                li
-                    p.text-siletaMedium Tel:
-                li
-                    a.text-siletaMedium.py-2.px-16(href="tel:+27124358002") +27 12 435 8002
-                li.mt-8
-                    p.text-siletaMedium Email:
-                li
-                    button.text-siletaMedium#showEmail(onclick="showEmail()" class="hover:text-siletaGreen") <em>Show email</em>
+        ul.flex.flex-col.items-center.footer-translate(class="lg:items-start")
+            li.contact-list-1
+                h2.underline.underline-offset-4(class="lg:text-left") Contact
+            li
+                p.text-siletaMedium(class="lg:text-siletaBody") Tel:
+            li
+                a.text-siletaMedium.py-2.px-16(href="tel:+27124358002")(class="lg:py-0 lg:px-0 lg:text-siletaBody") +27 12 435 8002
+            li.mt-8
+                p.text-siletaMedium(class="lg:text-siletaBody") Email:
+            li
+                button.text-siletaMedium#showEmail(onclick="showEmail()" class="hover:text-siletaGreen lg:text-siletaBody") <em>Show email</em>
