Services image added

--- a/src/contact.pug
+++ b/src/contact.pug
@@ -12,7 +12,7 @@ block main
         div.contact
             p Are you looking for an Engineer to itemise your project into manageable milestones?<br><br>Would you like guidance on deployment of technology or to assess return on investment thereof?<br><br>Contact our head office for a no-fuss, no obligation chat. An engineer will be able to discuss prices and options to meet your requirements.
             div.line-full
-            div(class="lg:flex lg:justify-between lg:gap-x-8")
+            div(class="xl:flex xl:justify-between xl:gap-x-8")
                 div.flex.justify-center.gap-8
                     ul.w-56
                         li 
@@ -34,4 +34,4 @@ block main
                             h2.font-normal 254 Shelanti Avenue, Centurion, 0157, Pretoria
                         li
                             h2.font-normal PO Box 12291, Die Hoewes x2, 0163, Gauteng
-                img.w-72.mt-8.mx-auto(class="md:hidden lg:block lg:mt:0 lg:mx-0 lg:mr-8" src="../assets/images/icons/phone-green-large.svg", alt="Green phone icon")
+                img.w-72.mt-8.mx-auto(class="md:hidden xl:block xl:mt:0 xl:mx-0 xl:mr-8" src="../assets/images/icons/phone-green-large.svg", alt="Green phone icon")
