Header and footer finalised

--- a/src/layout/footer.pug
+++ b/src/layout/footer.pug
@@ -18,3 +18,7 @@ nav
                 p.text-siletaMedium(class="xl:text-siletaBody") Email:
             li
                 button.text-siletaMedium#showEmail(onclick="showEmail()" class="hover:text-siletaGreen xl:text-siletaBody") <em>Show email</em>
+div.py-4.flex.gap-2.justify-center
+    h3.text-siletaBody.font-normal © Sileta Engineers
+    p |
+    a.text-siletaBody.text-blue-500(href="http://www.sileta.co.za/") www.sileta.co.za
