--- a/src/layout/header.pug
+++ b/src/layout/header.pug
@@ -1,5 +1,5 @@
 header
-    div.hidden.top-header(class="xl:block xl:flex xl:gap-4 xl:py-2 xl:items-center xl:justify-end xl:pr-24")
+    div.hidden.top-header(class="xl:flex xl:gap-4 xl:py-2 xl:items-center xl:justify-end xl:pr-24")
         div.flex.gap-2.items-center
             img.h-4(src="../assets/images/icons/phone-grey.svg", alt="Phone call icon")
             button#showEmailHeader(onclick="showEmailHeader()")
