--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,7 +4,7 @@
 
 @layer components {
   #mobileNav {
-    top: 185px;
+    top: 181px;
     z-index: 1;
   }
 
@@ -21,12 +21,12 @@
         background-color: transparent;
         img {
           margin-left: 2.5rem;
+          padding: 0 2rem 0 0;
         }
       }
       #mobileNav {
-        top: 115px;
+        top: 110px;
         left: 0rem;
-        border-top: solid 1px rgba(25, 25, 25, 0.5);
       }
     }
     @include mqLarge {
