Meta data finalised and favicon added

--- a/src/company.pug
+++ b/src/company.pug
@@ -1,7 +1,10 @@
 extends layout/app
 
+prepend head 
+    - let pageTitle = `Company - ${busName}`
+
 append variables
-    - pageTitle = 'Company'
+    - pageName = 'Company'
 
 block main
 
