--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,8 @@
 extends layout/app
 
+prepend head 
+    - let pageTitle = `Home - ${busName}`
+
 block main
     section
         div.hidden.fade.slides
