--- a/src/services.pug
+++ b/src/services.pug
@@ -1,7 +1,10 @@
 extends layout/app
 
+prepend head 
+    - let pageTitle = `Services - ${busName}`
+
 append variables
-    - pageTitle = 'Services'
+    - pageName = 'Services'
 
 block main
     section
