--- a/src/layout/app.pug
+++ b/src/layout/app.pug
@@ -12,6 +12,7 @@ html(lang="en")
         <meta name="description" content="#{busName} | We are a team of talented engineers who have a vast amount of experience with the sole intention of doing things differently.">
         <link rel="shortcut icon" href="../assets/images/favicon.ico">
         link(rel="stylesheet", href="styles/main.scss")
+        <meta name="robots" content="index, follow"/>
 
     body
 
